LOADUI-823 Made sure that LoadUI restarts upon having updated the font-cache